--- a/requirements.txt
+++ b/requirements.txt
@@ -37,7 +37,7 @@ httpx==0.28.1
 idna==3.10
 imbalanced-learn==0.13.0
 ipykernel==6.29.5
-ipython==9.3.0
+ipython
 ipython_pygments_lexers==1.1.1
 ipywidgets==8.1.7
 isoduration==20.11.0
